--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "angular-in-memory-web-api": "^0.3.2",
     "bootstrap": "^4.2.1",
     "core-js": "~2.4.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
+    "moment": "^2.18.1",
     "popper.js": "^1.14.6",
     "rxjs": "~5.1.0",
     "zone.js": "~0.8.4"
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.3",
     "@angular/compiler-cli": "~4.0.0",
+    "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "^2.0.48",
     "@types/node": "~6.0.60",
