--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@angular/router": "~4.0.0",
     "angular-in-memory-web-api": "^0.3.2",
     "angular2-token": "^0.2.0-beta.12",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^3.3.7",
     "core-js": "~2.4.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
     "moment": "^2.18.1",
     "popper.js": "^1.14.6",
     "rxjs": "~5.1.0",
-    "zone.js": "~0.8.4"
+    "zone.js": "~0.8.4",
+    "enhanced-resolve": "3.3.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.3",
