--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "angular-in-memory-web-api": "^0.3.2",
-    "angular2-token": "^0.2.0-beta.12",
+    "@angular/animations": "^6.1.10",
+    "@angular/cli": "^7.3.7",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "angular2-token": "^0.2.0",
     "bootstrap": "^3.3.7",
     "core-js": "~2.4.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
     "moment": "^2.18.1",
     "popper.js": "^1.14.6",
-    "rxjs": "~5.1.0",
-    "zone.js": "~0.8.4",
-    "enhanced-resolve": "3.3.0"
+    "rxjs": "^6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.3",
-    "@angular/compiler-cli": "~4.0.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/compiler-cli": "^6.1.10",
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "^2.0.48",
@@ -51,6 +53,10 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "2.9.2"
+  },
+  "engines": {
+    "node": "11.13.0",
+    "npm": "6.7.0"
   }
 }
